--- a/site/src/index.html
+++ b/site/src/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div id="exporter" class="exporter hidden">
-        <img src="./img/ic_close_black_24px.svg">
+        <img id="btn_exporter_close" src="./img/ic_close_black_24px.svg">
     </div>
 </body>
 </html>
