remove reset button

--- a/site/src/index.html
+++ b/site/src/index.html
@@ -13,8 +13,7 @@
         </div>
 
         <div class="floating-ui">
-            <div id="btn_reset" class="btn">Reset</div>
-            <div id="btn_debug" class="btn">Filter</div>
+            <div id="btn_filter" class="btn">Filter</div>
             <div id="btn_download" class="btn">Download / Share</div>
         </div>
     </div>
