--- a/site/src/index.html
+++ b/site/src/index.html
@@ -20,6 +20,7 @@
 
     <div id="exporter" class="exporter hidden">
         <img id="btn_exporter_close" src="./img/ic_close_black_24px.svg">
+        <div id="btn_save" class="btn">Save Image</div>
     </div>
 </body>
 </html>
