add color picker

--- a/site/src/index.html
+++ b/site/src/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <div id="main" class="main">
+        <h1>Pokémon Nicknamer</h1>
+
+        <div class="type-picker"></div>
+
         <div class="pokegrid-wrapper">
             <div id="pokedex" class="pokegrid">
         </div>
