--- a/site/src/index.html
+++ b/site/src/index.html
@@ -9,24 +9,24 @@
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
     <!-- Search Engine -->
     <meta name="description" content="Nickname and share your Pokémon!">
-    <meta name="image" content="./img/logo.png">
+    <meta name="image" content="https://nicknames.please.rest/img/logo.png">
     <!-- Schema.org for Google -->
-    <meta itemprop="name" content="Wholesome Games">
+    <meta itemprop="name" content="Pokémon Nicknamer">
     <meta itemprop="description" content="Nickname and share your Pokémon!">
-    <meta itemprop="image" content="./img/logo.png">
+    <meta itemprop="image" content="https://nicknames.please.rest/img/logo.png">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Wholesome Games">
+    <meta name="twitter:title" content="Pokémon Nicknamer">
     <meta name="twitter:description"
         content="Nickname and share your Pokémon!">
-    <meta name="twitter:creator" content="@_wholesomegames">
-    <meta name="twitter:image:src" content="./img/logo.png">
+    <meta name="twitter:creator" content="@cloutsocks">
+    <meta name="twitter:image:src" content="https://nicknames.please.rest/img/logo.png">
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta name="og:title" content="Wholesome Games">
+    <meta name="og:title" content="Pokémon Nicknamer">
     <meta name="og:description" content="Nickname and share your Pokémon!">
-    <meta name="og:image" content="./img/logo.png">
-    <meta name="og:url" content="https://wholesomegames.com/">
-    <meta name="og:site_name" content="Wholesome Games">
+    <meta name="og:image" content="https://nicknames.please.rest/img/logo.png">
+    <meta name="og:url" content="https://nicknames.please.rest/">
+    <meta name="og:site_name" content="Pokémon Nicknamer">
     <meta name="og:type" content="website">
 </head>
 <body>
